--- a/config.env
+++ b/config.env
@@ -18,7 +18,7 @@ USE_PAIRING_CODE=false
 
 # ඔබේ WhatsApp number එක (pairing code use කරනවනම්)
 # Example: 94701391585 (country code එකත් එක්ක, + නැතිව)
-PHONE_NUMBER=
+PHONE_NUMBER=94701391585
 
 # ==================== DATABASE ====================
 # MongoDB connection URL
@@ -46,7 +46,7 @@ OWNER_NUMBER=94701391585
 
 # SUDO users (comma separated numbers without +)
 # Example: 94701391585,94771234567
-SUDO=94701391585
+SUDO=94771189323
 
 # ==================== ALIVE & MENU ====================
 ALIVE_IMG=https://i.imgur.com/VlZ2Y0l.jpeg
