--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@
 # Format 3: Any prefix (auto removes)
 # SESSION_ID=APEX~AB1234cd#xyz789abc
 #
-SESSION_ID=
+SESSION_ID=nuYCSZQA#Pc_Upj0_WJMv_KbrsVH1mVSxTxkvFavKilM1B6vlQLQ
 
 # ==================== PAIRING CODE ====================
 # QR code නැතිව phone number එකෙන් pair කරන්න (true/false)
