--- a/config.env
+++ b/config.env
@@ -14,7 +14,7 @@ SESSION_ID=nuYCSZQA#Pc_Upj0_WJMv_KbrsVH1mVSxTxkvFavKilM1B6vlQLQ
 
 # ==================== PAIRING CODE ====================
 # QR code නැතිව phone number එකෙන් pair කරන්න (true/false)
-USE_PAIRING_CODE=false
+USE_PAIRING_CODE=true
 
 # ඔබේ WhatsApp number එක (pairing code use කරනවනම්)
 # Example: 94701391585 (country code එකත් එක්ක, + නැතිව)
