--- a/config.env
+++ b/config.env
@@ -14,7 +14,7 @@ SESSION_ID=Hz4H1AQZwS-a7SRQmXwPH_swCNmwvOxfOHqaLUreK-hJSTpdY8U
 
 # ==================== PAIRING CODE ====================
 # QR code නැතිව phone number එකෙන් pair කරන්න (true/false)
-USE_PAIRING_CODE=true
+USE_PAIRING_CODE=false
 
 # ඔබේ WhatsApp number එක (pairing code use කරනවනම්)
 # Example: 94701391585 (country code එකත් එක්ක, + නැතිව)
