--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@
 # Format 3: Any prefix (auto removes)
 # SESSION_ID=APEX~AB1234cd#xyz789abc
 #
-SESSION_ID=Hz4H1AQZwS-a7SRQmXwPH_swCNmwvOxfOHqaLUreK-hJSTpdY8U
+SESSION_ID="Hz4H1AQZ#wS-a7SRQmXwPH_swCNmwvOxfOHqaLUreK-hJSTpdY8U"
 
 # ==================== PAIRING CODE ====================
 # QR code නැතිව phone number එකෙන් pair කරන්න (true/false)
