--- a/config.env
+++ b/config.env
@@ -1,67 +1,85 @@
-# ==================== SESSION ====================
-# ඔබේ Mega session code එක මෙතන paste කරන්න
-# 
-# Format 1 (Recommended): Code එක විතරක් (පහසුම!)
-# SESSION_ID=AB1234cd#xyz789abc
-# 
-# Format 2: Full link
-# SESSION_ID=https://mega.nz/file/AB1234cd#xyz789abc
-# 
-# Format 3: Any prefix (auto removes)
-# SESSION_ID=APEX~AB1234cd#xyz789abc
-#
-SESSION_ID="Hz4H1AQZ#wS-a7SRQmXwPH_swCNmwvOxfOHqaLUreK-hJSTpdY8U"
+# ==================== BOT INFO ====================
+SESSION_ID=
+BOT_NAME=APEX-MD V2
+VERSION=2.0.0
 
-# ==================== PAIRING CODE ====================
-# QR code නැතිව phone number එකෙන් pair කරන්න (true/false)
+# ==================== PAIRING ====================
 USE_PAIRING_CODE=false
-
-# ඔබේ WhatsApp number එක (pairing code use කරනවනම්)
-# Example: 94701391585 (country code එකත් එක්ක, + නැතිව)
-PHONE_NUMBER=94701391585
+PHONE_NUMBER=
 
 # ==================== DATABASE ====================
-# MongoDB connection URL
-MONGODB=mongodb+srv://realpancha:2006.Shehan@cluster0.jh6kzmp.mongodb.net/APEX_V4?retryWrites=true&w=majority
+MONGODB=
 
 # ==================== BOT SETTINGS ====================
-# Bot name
-BOT_NAME=APEX-MD
-
-# Command prefix (., !, #, etc.)
 PREFIX=.
-
-# Bot mode (public, private, inbox, groups)
 MODE=public
-
-# Auto read messages (true/false)
 AUTO_READ=true
-
-# Auto read status (true/false)
 AUTO_STATUS_READ=false
+AUTO_TYPING=false
+AUTO_RECORDING=false
+AUTO_BIO=false
 
 # ==================== OWNER INFO ====================
-OWNER_NAME=Shehan Vimukthi
-OWNER_NUMBER=94701391585
-
-# SUDO users (comma separated numbers without +)
-# Example: 94701391585,94771234567
-SUDO=94771189323
+OWNER_NAME=Your Name
+OWNER_NUMBER=94xxxxxxxxx
+SUDO=94xxxxxxxxx,94yyyyyyyyy
 
 # ==================== ALIVE & MENU ====================
 ALIVE_IMG=https://i.imgur.com/VlZ2Y0l.jpeg
-ALIVE_MSG=✅ APEX-MD IS ONLINE
-
-# ==================== OTHER ====================
-# Port for web server
-PORT=8000
-
-# Time zone
-TIME_ZONE=Asia/Colombo
-
-# Debug mode (true/false)
-DEBUG=false
+ALIVE_MSG=✅ *APEX-MD IS ONLINE*
+MENU_IMG=https://i.imgur.com/VlZ2Y0l.jpeg
 
 # ==================== API KEYS ====================
+# AI APIs
 GEMINI_API=
+OPENAI_API=
+HUGGINGFACE_API=
+
+# Download APIs
+YOUTUBE_API=
+SPOTIFY_API=
+
+# Utility APIs
 WEATHER_API=
+NEWS_API=
+CURRENCY_API=
+TRANSLATE_API=
+
+# Image APIs
+REMOVE_BG_API=
+IMGBB_API=
+
+# ==================== GROUP SETTINGS ====================
+ANTILINK_ENABLED=true
+ANTILINK_ACTION=kick
+WELCOME_ENABLED=true
+GOODBYE_ENABLED=true
+AUTO_STICKER=false
+
+# ==================== DOWNLOAD SETTINGS ====================
+MAX_DOWNLOAD_SIZE=500
+YOUTUBE_QUALITY=360p
+AUDIO_QUALITY=128
+
+# ==================== SECURITY ====================
+BLOCK_SPAM=true
+SPAM_COUNT=5
+BAN_TIME=3600
+ANTI_CALL=false
+ANTI_BOT=true
+
+# ==================== OTHER ====================
+PORT=8000
+TIME_ZONE=Asia/Colombo
+DEBUG=false
+LOGS=true
+
+# ==================== RATE LIMITING ====================
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_MAX=10
+RATE_LIMIT_WINDOW=60000
+
+# ==================== PREMIUM FEATURES ====================
+PREMIUM_MODE=false
+ECONOMY_ENABLED=false
+LEVEL_SYSTEM=false
