--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "apex-md-v2",
+  "name": "apex-md-v2-enhanced",
   "version": "2.0.0",
-  "description": "Advanced WhatsApp Bot - APEX MD V2",
+  "description": "Advanced WhatsApp Bot - APEX MD V2 Enhanced Edition",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node test.js"
   },
-  "keywords": ["whatsapp", "bot", "baileys", "apex"],
-  "author": "Shehan Vimukthi",
+  "keywords": ["whatsapp", "bot", "baileys", "apex", "enhanced"],
+  "author": "Shehan Vimukthi - Enhanced by AI",
   "license": "MIT",
   "dependencies": {
     "@whiskeysockets/baileys": "latest",
@@ -30,6 +32,27 @@
     "node-webpmux": "^3.1.7",
     "pino": "^8.16.1",
     "qrcode-terminal": "^0.12.0",
-    "yt-search": "^2.10.4"
+    "yt-search": "^2.10.4",
+    "@distube/ytdl-core": "^4.13.3",
+    "ytdl-core": "^4.11.5",
+    "@google/generative-ai": "^0.1.3",
+    "openai": "^4.20.1",
+    "translate-google": "^1.5.0",
+    "weather-js": "^2.0.0",
+    "cheerio": "^1.0.0-rc.12",
+    "node-cron": "^3.0.3",
+    "qrcode": "^1.5.3",
+    "canvas": "^2.11.2",
+    "performance-now": "^2.1.0",
+    "mathjs": "^12.2.0",
+    "remove.bg": "^1.3.0",
+    "express-rate-limit": "^7.1.5",
+    "node-cache": "^5.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
