--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ USE_PAIRING_CODE=false
 PHONE_NUMBER=
 
 # ==================== DATABASE ====================
-MONGODB=
+MONGODB=mongodb+srv://realpancha:2006.Shehan@cluster0.jh6kzmp.mongodb.net/APEX_V4?retryWrites=true&w=majority
 
 # ==================== BOT SETTINGS ====================
 PREFIX=.
@@ -21,8 +21,8 @@ AUTO_BIO=false
 
 # ==================== OWNER INFO ====================
 OWNER_NAME=Your Name
-OWNER_NUMBER=94xxxxxxxxx
-SUDO=94xxxxxxxxx,94yyyyyyyyy
+OWNER_NUMBER=94701391585
+SUDO=94771189323
 
 # ==================== ALIVE & MENU ====================
 ALIVE_IMG=https://i.imgur.com/VlZ2Y0l.jpeg
@@ -50,7 +50,7 @@ REMOVE_BG_API=
 IMGBB_API=
 
 # ==================== GROUP SETTINGS ====================
-ANTILINK_ENABLED=true
+ANTILINK_ENABLED=false
 ANTILINK_ACTION=kick
 WELCOME_ENABLED=true
 GOODBYE_ENABLED=true
