--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Shehan Vimukthi - Enhanced by AI",
   "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
+    "@whiskeysockets/baileys": "^6.5.0",
     "axios": "^1.6.0",
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
@@ -23,34 +23,25 @@
     "google-it": "^1.6.4",
     "got": "^11.8.6",
     "human-readable": "^0.2.1",
-    "jimp": "^1.6.0",
+    "jimp": "^0.16.13",
     "jsdom": "^22.1.0",
     "megajs": "^1.1.1",
     "moment-timezone": "^0.5.43",
-    "mongoose": "^8.0.0",
+    "mongoose": "^7.6.0",
     "node-fetch": "^2.7.0",
     "node-webpmux": "^3.1.7",
     "pino": "^8.16.1",
     "qrcode-terminal": "^0.12.0",
     "yt-search": "^2.10.4",
-    "@distube/ytdl-core": "^4.13.3",
     "ytdl-core": "^4.11.5",
     "@google/generative-ai": "^0.1.3",
     "openai": "^4.20.1",
     "translate-google": "^1.5.0",
-    "weather-js": "^2.0.0",
     "cheerio": "^1.0.0-rc.12",
     "node-cron": "^3.0.3",
     "qrcode": "^1.5.3",
-    "canvas": "^2.11.2",
-    "performance-now": "^2.1.0",
-    "mathjs": "^12.2.0",
-    "remove.bg": "^1.3.0",
-    "express-rate-limit": "^7.1.5",
-    "node-cache": "^5.1.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "mathjs": "^11.11.0",
+    "performance-now": "^2.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
