--- a/config.env
+++ b/config.env
@@ -4,8 +4,8 @@ BOT_NAME=APEX-MD V2
 VERSION=2.0.0
 
 # ==================== PAIRING ====================
-USE_PAIRING_CODE=false
-PHONE_NUMBER=
+USE_PAIRING_CODE=true
+PHONE_NUMBER=94701391585
 
 # ==================== DATABASE ====================
 MONGODB=mongodb+srv://realpancha:2006.Shehan@cluster0.jh6kzmp.mongodb.net/APEX_V4?retryWrites=true&w=majority
