--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # ==================== BOT INFO ====================
-SESSION_ID=
+SESSION_ID="Hz4H1AQZ#wS-a7SRQmXwPH_swCNmwvOxfOHqaLUreK-hJSTpdY8U" 
 BOT_NAME=APEX-MD V2
 VERSION=2.0.0
 
